--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     };
 
     // --- Android Billing bridge (Pro entitlement) ---
+    //extraneous comment
     // Native Android pushes updates via: window.__androidBilling.onProStatusChanged(isPro, source)
     // If the push arrives before this handler exists, native stores window.__androidPro / window.__androidProSource.
     function applyProStatus(isPro, source) {
