--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       plans: [],
       activePlanId: null,
       history: [],
+      statsHistory: [],
       session: null,
       timer: null,
       segmentIndex: 0,
@@ -112,12 +113,16 @@
       quickSetup: { totalMinutes: 15, numDrills: 2 },
       deleteConfirm: null,
       showClearConfirm: false,
+      statsResetConfirm: null,
+      statsResetWeekAt: null,
+      statsResetMonthAt: null,
+      statsResetLifetimeAt: null,
       showUpgradeOverlay: false,
-      hasLoaded: false
+      hasLoaded: false,
+      isPaused: false,
     };
 
     // --- Android Billing bridge (Pro entitlement) ---
-    //extraneous comment
     // Native Android pushes updates via: window.__androidBilling.onProStatusChanged(isPro, source)
     // If the push arrives before this handler exists, native stores window.__androidPro / window.__androidProSource.
     function applyProStatus(isPro, source) {
@@ -168,7 +173,10 @@
           routines: app.routines,
           plans: app.plans,
           activePlanId: app.activePlanId,
-          history: app.history
+          history: app.history,
+          statsHistory: app.statsHistory,
+          statsResetWeekAt: app.statsResetWeekAt,
+          statsResetMonthAt: app.statsResetMonthAt,
         });
 
         // Try persistent storage first, fallback to localStorage
@@ -203,6 +211,7 @@
           app.plans = parsed.plans || [];
           app.activePlanId = parsed.activePlanId || null;
           app.history = parsed.history || [];
+          app.statsHistory = parsed.statsHistory || parsed.history || [];
         }
 
         // Add default routine if none exist
@@ -249,10 +258,11 @@
             const seg = app.session.segments[app.segmentIndex];
             app.timeLeft = seg.minutes * 60;
             announce(seg.name);
-          } else {
-            stopTimer();
-            app.view = 'complete';
-          }
+        } else {
+          announceComplete();
+          stopTimer();
+          app.view = 'complete';
+        }
         }
         render();
       }, 1000);
@@ -274,34 +284,77 @@
       gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5);
       osc.start();
       osc.stop(ctx.currentTime + 0.5);
+        setTimeout(() => {
+          const text = 'Next: ' + name;
+          if (window.AndroidTTS && typeof window.AndroidTTS.speak === 'function') {
+            window.AndroidTTS.speak(text);
+          } else {
+            const u = new SpeechSynthesisUtterance(text);
+            u.volume = 1;
+            speechSynthesis.speak(u);
+          }
+        }, 600);
+    }
+
+    function announceComplete() {
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const osc = ctx.createOscillator();
+      const gain = ctx.createGain();
+      osc.connect(gain);
+      gain.connect(ctx.destination);
+      osc.frequency.value = 800;
+      gain.gain.setValueAtTime(0.3, ctx.currentTime);
+      gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5);
+      osc.start();
+      osc.stop(ctx.currentTime + 0.5);
       setTimeout(() => {
-        const u = new SpeechSynthesisUtterance('Next: ' + name);
-        u.volume = 1;
-        speechSynthesis.speak(u);
+        const text = 'Routine complete.';
+        if (window.AndroidTTS && typeof window.AndroidTTS.speak === 'function') {
+          window.AndroidTTS.speak(text);
+        } else {
+          const u = new SpeechSynthesisUtterance(text);
+          u.volume = 1;
+          speechSynthesis.speak(u);
+        }
       }, 600);
     }
 
+
     // Actions
     window.goTo = (view) => {
-  app._navStack = app._navStack || [];
-  if (app.view && app.view !== view) app._navStack.push(app.view);
-  app.view = view;
-  render();
-};
+      app._navStack = app._navStack || [];
+      if (app.view && app.view !== view) app._navStack.push(app.view);
+      app.view = view;
+      render();
+    };
 
-window.__handleAndroidBack = () => {
-  if (app.showUpgradeOverlay) {
-    app.showUpgradeOverlay = false;
-    render();
-    return true;
-  }
-  if (app._navStack && app._navStack.length) {
-    app.view = app._navStack.pop();
-    render();
-    return true;
-  }
-  return false;
-};
+    window.__handleAndroidBack = () => {
+      if (app.showUpgradeOverlay) {
+        app.showUpgradeOverlay = false;
+        render();
+        return true;
+      }
+      if (app._navStack && app._navStack.length) {
+        app.view = app._navStack.pop();
+        render();
+        return true;
+      }
+      return false;
+    };
+
+
+    window.__handleAndroidBack = () => {
+      if (app.showUpgradeOverlay) {
+        app.showUpgradeOverlay = false;
+        render();
+        return true;
+      }
+      if (app.view && app.view !== 'home') {
+        goTo('home');
+        return true;
+      }
+      return false;
+    };
 
     window.togglePro = () => {
       app.isPro = !app.isPro;
@@ -393,6 +446,7 @@ window.__handleAndroidBack = () => {
       app.segmentIndex = 0;
       app.timeLeft = routine.segments[0].minutes * 60;
       app.view = 'session';
+      app.isPaused = false;
       announce(routine.segments[0].name);
       startTimer();
       render();
@@ -404,12 +458,26 @@ window.__handleAndroidBack = () => {
         const seg = app.session.segments[app.segmentIndex];
         app.timeLeft = seg.minutes * 60;
         announce(seg.name);
-      } else {
-        stopTimer();
-        app.view = 'complete';
-      }
+        } else {
+          announceComplete();
+          stopTimer();
+          app.view = 'complete';
+        }
       render();
     };
+
+    window.pauseRoutine = () => {
+      stopTimer();
+      app.isPaused = true;
+      render();
+    };
+
+    window.continueRoutine = () => {
+      app.isPaused = false;
+      startTimer();
+      render();
+    };
+
 
     window.endSession = () => {
       stopTimer();
@@ -452,6 +520,7 @@ window.__handleAndroidBack = () => {
         rating: rating,
         notes: notes
       });
+      app.statsHistory.unshift(app.history[0]);
 
       // If there's an active plan, add this session's data to it
       if (app.activePlanId) {
@@ -905,14 +974,49 @@ window.__handleAndroidBack = () => {
       }
     };
 
+    window.requestResetStats = (period) => {
+      const msg =
+        period === 'week'
+          ? 'Delete all sessions from the past 7 days?'
+          : period === 'month'
+          ? 'Delete all sessions from the past 30 days?'
+          : period === 'lifetime'
+          ? 'Reset lifetime statistics? (This will NOT delete session history.)'
+          : 'Delete ALL session history? This cannot be undone!';
+      app.statsResetConfirm = { period, msg };
+      render();
+    };
+
+    window.cancelResetStats = () => {
+      app.statsResetConfirm = null;
+      render();
+    };
+
+    window.confirmResetStats = () => {
+      const c = app.statsResetConfirm;
+      if (!c) return;
+      app.statsResetConfirm = null;
+      resetStats(c.period);
+    };
+
     window.resetStats = (period) => {
       const now = new Date();
-      let cutoffDate;
 
       if (period === 'week') {
-        cutoffDate = new Date(now - 7 * 24 * 60 * 60 * 1000);
+        app.statsResetWeekAt = now.toISOString();
+        save();
+        render();
+        return;
       } else if (period === 'month') {
-        cutoffDate = new Date(now - 30 * 24 * 60 * 60 * 1000);
+        app.statsResetMonthAt = now.toISOString();
+        save();
+        render();
+        return;
+      } else if (period === 'lifetime') {
+        app.statsResetLifetimeAt = now.toISOString();
+        save();
+        render();
+        return;
       } else if (period === 'all') {
         app.history = [];
         save();
@@ -920,10 +1024,9 @@ window.__handleAndroidBack = () => {
         return;
       }
 
-      app.history = app.history.filter(h => new Date(h.date) < cutoffDate);
       save();
       render();
-    };
+    }
 
     // Render
     function render() {
@@ -1159,10 +1262,16 @@ window.__handleAndroidBack = () => {
                 <div class="text-6xl font-bold text-center text-[#2F6F4E]">${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}</div>
               </div>
 
-              <div class="space-y-3">
-                <button onclick="skipSegment()" class="w-full pc-btn pc-btn-secondary">⏭️ Skip</button>
-                <button onclick="endSession()" class="w-full pc-btn pc-btn-danger">⏹️ End</button>
+            <div class="space-y-3">
+              <div class="flex gap-3">
+                ${app.isPaused
+                  ? '<button onclick="continueRoutine()" class="w-1/2 pc-btn pc-btn-secondary">▶️ Continue</button>'
+                  : '<button onclick="pauseRoutine()" class="w-1/2 pc-btn pc-btn-secondary">⏸️ Pause</button>'
+                }
+                <button onclick="skipSegment()" class="w-1/2 pc-btn pc-btn-secondary">⏭️ Skip</button>
               </div>
+              <button onclick="endSession()" class="w-full pc-btn pc-btn-danger">⏹️ End</button>
+            </div>
 
               <div class="mt-6 pt-6 border-t text-sm">
                 ${app.session.segments.map((sg, i) => `
@@ -1265,10 +1374,23 @@ window.__handleAndroidBack = () => {
           avgRating: sessions.length ? (sessions.reduce((s, h) => s + (h.rating || 0), 0) / sessions.length).toFixed(1) : 0
         });
 
+        const weekResetAt = app.statsResetWeekAt ? new Date(app.statsResetWeekAt).getTime() : 0;
+        const monthResetAt = app.statsResetMonthAt ? new Date(app.statsResetMonthAt).getTime() : 0;
+        const lifetimeResetAt = app.statsResetLifetimeAt ? new Date(app.statsResetLifetimeAt).getTime() : 0;
+
         const stats = {
-          week: calc(app.history.filter(h => new Date(h.date).getTime() >= day7)),
-          month: calc(app.history.filter(h => new Date(h.date).getTime() >= day30)),
-          lifetime: calc(app.history)
+          week: calc(app.statsHistory.filter(h => {
+            const t = new Date(h.date).getTime();
+            return t >= day7 && t >= weekResetAt;
+          })),
+          month: calc(app.statsHistory.filter(h => {
+            const t = new Date(h.date).getTime();
+            return t >= day30 && t >= monthResetAt;
+          })),
+          lifetime: calc(app.statsHistory.filter(h => {
+            const t = new Date(h.date).getTime();
+            return t >= lifetimeResetAt;
+          }))
         };
 
         const blur = !app.isPro ? 'filter blur-sm' : '';
@@ -1329,10 +1451,21 @@ window.__handleAndroidBack = () => {
 
           <div class="pc-card p-4">
             <h3 class="font-bold text-gray-800 mb-3">Reset Statistics</h3>
+
+            ${app.statsResetConfirm ? `
+              <div class="bg-red-50 border border-red-200 rounded-lg p-3 mb-3">
+                <p class="text-sm text-red-800 font-medium mb-3">${app.statsResetConfirm.msg}</p>
+                <div class="flex gap-3">
+                  <button onclick="confirmResetStats()" class="flex-1 pc-btn pc-btn-danger">Confirm</button>
+                  <button onclick="cancelResetStats()" class="flex-1 pc-btn pc-btn-secondary">Cancel</button>
+                </div>
+              </div>
+            ` : ''}
+
             <div class="grid grid-cols-2 gap-3">
-              <button onclick="if(confirm('Delete all sessions from the past 7 days?')) resetStats('week')" class="bg-red-500 hover:bg-red-600 text-white rounded-lg py-2 text-sm font-semibold">Reset 7 Days</button>
-              <button onclick="if(confirm('Delete all sessions from the past 30 days?')) resetStats('month')" class="bg-red-500 hover:bg-red-600 text-white rounded-lg py-2 text-sm font-semibold">Reset 30 Days</button>
-              <button onclick="if(confirm('Delete ALL session history? This cannot be undone!')) resetStats('all')" class="col-span-2 pc-btn pc-btn-danger">Reset All History</button>
+              <button onclick="requestResetStats('week')" class="pc-btn pc-btn-danger">Reset 7 Days</button>
+              <button onclick="requestResetStats('month')" class="pc-btn pc-btn-danger">Reset 30 Days</button>
+              <button onclick="requestResetStats('lifetime')" class="col-span-2 pc-btn pc-btn-danger">Reset Lifetime Statistics</button>
             </div>
           </div>
         `;
@@ -1377,6 +1510,22 @@ window.__handleAndroidBack = () => {
               `).join('')}
             </div>
           `}
+
+          <div class="pc-card p-4 mt-4">
+            <h3 class="font-bold text-gray-800 mb-3">Reset History</h3>
+
+            ${app.statsResetConfirm ? `
+              <div class="bg-red-50 border border-red-200 rounded-lg p-3 mb-3">
+                <p class="text-sm text-red-800 font-medium mb-3">${app.statsResetConfirm.msg}</p>
+                <div class="flex gap-3">
+                  <button onclick="confirmResetStats()" class="flex-1 pc-btn pc-btn-danger">Confirm</button>
+                  <button onclick="cancelResetStats()" class="flex-1 pc-btn pc-btn-secondary">Cancel</button>
+                </div>
+              </div>
+            ` : ''}
+
+            <button onclick="requestResetStats('all')" class="w-full pc-btn pc-btn-danger">Reset All History</button>
+          </div>
         `;
       }
 
@@ -1473,6 +1622,7 @@ window.__handleAndroidBack = () => {
               <div class="text-sm text-gray-600 space-y-2">
                 <p>✓ Up to 3 custom routines</p>
                 <p>✓ 30 minute max per routine</p>
+                <p>✓ 1 custom training plan</p>
                 <p>✓ Last 3 sessions in history</p>
                 <p>✓ Ball count tracking</p>
               </div>
@@ -1483,9 +1633,10 @@ window.__handleAndroidBack = () => {
               <div class="text-sm text-gray-700 space-y-2">
                 <p>✓ <strong>Unlimited</strong> custom routines</p>
                 <p>✓ <strong>Unlimited</strong> routine length</p>
+                <p>✓ <strong>Unlimited</strong> training plans</p>
+                <p>✓ Training plan progress</p>
                 <p>✓ <strong>Full</strong> session history</p>
                 <p>✓ Complete statistics tracking</p>
-                <p>✓ Training plan progress</p>
                 <p>✓ Session ratings and notes</p>
               </div>
             </div>
